--- a/playbooks/ansible.cfg
+++ b/playbooks/ansible.cfg
@@ -2,5 +2,5 @@
 roles_path = roles
 host_key_checking = False
 forks = 64
-inventory = ./inventory/server.host
+inventory = ./inventory.host
 remote_user = root
