--- a/playbooks/roles/php/tasks/main.yml
+++ b/playbooks/roles/php/tasks/main.yml
@@ -1,10 +1,12 @@
 ---
-- name: install php7-fpm
-  apt: name=php state=latest
-  tags: php
-
-- name: install php7-mysql
-  apt: name=php-mysql state=latest
+- name: install php7
+  apt: name={{item}} state=latest
+  with_items:
+    - php
+    - php-mbstring
+    - php-mysql
+    - php-mongodb
+    - composer
   tags: php
 
 - name: enable and start php7-fpm
