ansible: automatic deployment with git hooks

--- a/playbooks/playbooks/deploy.yml
+++ b/playbooks/playbooks/deploy.yml
@@ -2,6 +2,8 @@
 - name: Deploy apps
   user: root
   hosts: all
+  vars:
+    app_deploy_script_path: '{{playbook_dir}}/../../scripts'
   roles:
     - { role: app, app: '{{apps.plugboard_prod}}', nginx_default: true }
     - { role: app, app: '{{apps.plugboard_beta}}' }
