--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ script:
 after_success:
 - openssl aes-256-cbc -K $encrypted_332711f93af1_key -iv $encrypted_332711f93af1_iv
   -in scripts/key/deploy-key.enc -out scripts/key/deploy-key -d
+- chmod 600 scripts/key/deploy-key
 - ./scripts/deploy.sh
 cache:
   pip: true
