--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "production": "webpack -p"
   },
   "dependencies": {
     "react": "^15.4.2",
