--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
+    "babel-eslint": "7.1.1",
     "babel-loader": "^6.4.1",
     "babel-preset-react-app": "^2.2.0",
+    "eslint": "3.16.1",
+    "eslint-config-react-app": "^0.6.2",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-flowtype": "2.21.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.4.1",
     "webpack": "^2.3.0",
     "webpack-manifest-plugin": "^1.1.0"
   }
