--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,12 @@ install:
 - yarn
 before_script:
 - php artisan key:generate
-- yarn run dev
+- yarn run build
 - echo $ANSIBLE_VAULT > playbooks/ansible_vault
 script:
 - "( cd playbooks && ./tests.sh )"
 - phpunit
+- yarn run lint
 after_success:
 - openssl aes-256-cbc -K $encrypted_332711f93af1_key -iv $encrypted_332711f93af1_iv
   -in scripts/key/deploy-key.enc -out scripts/key/deploy-key -d
