js: autoreload browser in watch mode

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-preset-react-app": "^2.2.0",
+    "browser-sync": "^2",
+    "browser-sync-webpack-plugin": "^1.1.4",
     "clean-webpack-plugin": "^0.1.16",
     "eslint": "3.16.1",
     "eslint-config-prettier": "^1.5.0",
