--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-toolbox": "^2.0.0-beta.7"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
@@ -20,6 +21,7 @@
     "browser-sync": "^2",
     "browser-sync-webpack-plugin": "^1.1.4",
     "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.27.3",
     "eslint": "3.16.1",
     "eslint-config-prettier": "^1.5.0",
     "eslint-config-react-app": "^0.6.2",
@@ -29,9 +31,13 @@
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-react": "6.4.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "img-loader": "^2.0.0",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-loader": "^1.3.3",
     "prettier": "^0.22.0",
+    "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.0",
     "webpack-manifest-plugin": "^1.1.0"
