js: Add fabric yarn

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bulma": "^0.4.0",
     "fabric": "^1.7.9",
     "font-awesome": "^4.7.0",
+    "fabric": "^1.7.9",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
