--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "fix": "eslint --fix --ext .js resources/assets/"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "bulma": "^0.4.0",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-toolbox": "^2.0.0-beta.7"
+    "react-router": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
@@ -34,9 +37,10 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "img-loader": "^2.0.0",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-loader": "^1.3.3",
+    "node-sass": "^4.5.1",
     "prettier": "^0.22.0",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.0",
