--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "axios": "^0.15.3",
     "bulma": "^0.4.0",
-    "font-awesome": "^4.7.0",
+    "classnames": "^2.2.5",
     "fabric": "^1.7.9",
+    "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
