--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">=5.6.4",
         "appstract/laravel-opcache": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
+        "jenssegers/mongodb": "^3.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1"
