board: first link experimentation

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.5",
     "fabric": "^1.7.9",
     "font-awesome": "^4.7.0",
+    "pathfinding": "^0.4.18",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
