--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "ext-mongodb": "^1.1",
         "appstract/laravel-opcache": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
         "jenssegers/mongodb": "^3.2",
