--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-mongodb": "^1.1",
         "appstract/laravel-opcache": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
+        "intervention/image": "^2.3",
         "jenssegers/mongodb": "^3.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
