--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tabs": "^0.8.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
