board: add context menu

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
+    "react-contextmenu": "^2.7.0",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
