--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "bulma": "^0.4.0",
+    "bulma-quickview": "^0.0.1",
     "classnames": "^2.2.5",
     "fabric": "^1.7.9",
     "font-awesome": "^4.7.0",
