--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tabs": "^0.8.2",
+    "reactour": "^1.6.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
